--- a/our-people.html
+++ b/our-people.html
@@ -181,7 +181,9 @@
                         	<div class="container">
                         		<div class="text">
                         			<h1>Our People</h1>
-                        			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                        			<p>We are not just professionals; we aim to be your trusted business partner. 
+									We have meticulously assembled a core team that exemplifies our unwavering commitment to 
+										delivering exceptional service and fostering sustainable impact for our clients.</p>
                         		</div>
                         	</div>
                         </div>
