--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                     			</div>
                     
                     			<nav class="top-nav cell grid-x align-middle">
-                    				<ul class="language-nav">
+                    				<!-- <ul class="language-nav">
                     					<li><a href="#">DE</a></li>
                     					<li><a href="#" class="selected">EN</a></li>
                     					<li><a href="#">FR</a></li>
-                    				</ul>
+                    				</ul> -->
                     				<p class="location-label">Worldwide Locations:</p>
                     				<ul class="locations dropdown menu" data-dropdown-menu>
                     					<li>
