--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         				</picture>
                         				<div class="detail-text">
                         					<h2>Our People</h2>
-                        					<p>Andersen Tanzania is more than a tax and business advisory firm. We serve as a trusted partner to our clients, 
+                        					<p>Andersen in Tanzania is more than a tax and business advisory firm. We serve as a trusted partner to our clients, 
 												combining deep technical expertise with a practical understanding of the Tanzanian business environment.
 												Our team is purposefully built around integrity, collaboration, and excellence, ensuring we deliver sustainable,
 												value-driven solutions that support our clients’ long-term success.</p>
@@ -214,7 +214,7 @@
                         				</picture>
                         				<div class="detail-text">
                         					<h2>About Us</h2>
-                        					<p>Andersen Tanzania is the Tanzanian member firm of Andersen Global, an international association of independent member
+                        					<p>Andersen in Tanzania is the Tanzanian member firm of Andersen Global, an international association of independent member
 												firms comprised of tax, legal, and valuation professionals worldwide. We leverage our knowledge, technical expertise, 
 												and practical experience to support our clients in developing and implementing effective business and tax strategies,
 												enabling them to navigate complexity and remain competitive in a dynamic environment.</p>
