--- a/index.html
+++ b/index.html
@@ -1202,9 +1202,9 @@
                     				<div class="cell large-3 medium-12 small-12">
                     					<div class="footer-logo"><img src="assets/img/footer-logo.png" width="278" height="68" alt="Andersen"></div>
                     					<ul class="footer-social">
-                    						<li class="social-link linkedin"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-                    						<li class="social-link twitter"><a href="#"><i class="fa-brands fa-square-x-twitter"></i></a></li>
-                    						<li class="social-link facebook"><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+                    						<li class="social-link linkedin"><a href="https://www.linkedin.com/company/andersen-in-tanzania/"><i class="fa-brands fa-linkedin"></i></a></li>
+                    						<!-- <li class="social-link twitter"><a href="#"><i class="fa-brands fa-square-x-twitter"></i></a></li>
+                    						<li class="social-link facebook"><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li> -->
                     					</ul>
                     				</div>
                     
