--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,7 @@
                     				</div>
                     
                     				<nav class="cell large-3 medium-4 small-12">
-                    					<h5>About</h5>
+                    					<h5>About Us</h5>
     <!-- <ul>
         <li><a href="about.html">Who We Are</a></li>
         <li><a href="about.html">Our Values</a></li>
