--- a/locations.html
+++ b/locations.html
@@ -288,19 +288,19 @@
                     				<div class="cell large-3 medium-12 small-12">
                     					<div class="footer-logo"><img src="assets/img/footer-logo.png" width="278" height="68" alt="Andersen"></div>
                     					<ul class="footer-social">
-                    						<li class="social-link linkedin"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-                    						<li class="social-link twitter"><a href="#"><i class="fa-brands fa-square-x-twitter"></i></a></li>
-                    						<li class="social-link facebook"><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+                    						<li class="social-link linkedin"><a href="https://www.linkedin.com/company/andersen-in-tanzania/"><i class="fa-brands fa-linkedin"></i></a></li>
+                    						<!-- <li class="social-link twitter"><a href="#"><i class="fa-brands fa-square-x-twitter"></i></a></li>
+                    						<li class="social-link facebook"><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li> -->
                     					</ul>
                     				</div>
                     
                     				<nav class="cell large-3 medium-4 small-12">
-                    					<h5>About</h5>
-    <ul>
+                    					<h5>About Us</h5>
+    <!-- <ul>
         <li><a href="about.html">Who We Are</a></li>
         <li><a href="about.html">Our Values</a></li>
         <li><a href="about.html">Leadership</a></li>
-    </ul>
+    </ul> -->
                     				</nav>
                     				<nav class="cell large-3 medium-4 small-12">
                     					<h5>Services</h5>
