--- a/about.html
+++ b/about.html
@@ -465,12 +465,11 @@ Approach</h2>
                     				</div>
                     
                     				<nav class="cell large-3 medium-4 small-12">
-                    					<h5>About Us</h5>
-    <!-- <ul>
-        <li><a href="about.html">Who We Are</a></li>
-        <li><a href="about.html">Our Values</a></li>
-        <li><a href="about.html">Leadership</a></li>
-    </ul> -->
+                    					<h5>Andersen in Tanzania</h5>
+    
+        <li><a href="about.html">About Us</a></li>
+        <!-- <li><a href="about.html">Our Values</a></li>
+        <li><a href="about.html">Leadership</a></li> -->
                     				</nav>
                     				<nav class="cell large-3 medium-4 small-12">
                     					<h5>Services</h5>
