--- a/tax-services.html
+++ b/tax-services.html
@@ -379,13 +379,11 @@ Strategy Through Effective Tax Management</p>
                     					</ul>
                     				</div>
                     
-                    				<nav class="cell large-3 medium-4 small-12">
-                    					<h5>About Us</h5>
-    <!-- <ul>
-        <li><a href="about.html">Who We Are</a></li>
-        <li><a href="about.html">Our Values</a></li>
-        <li><a href="about.html">Leadership</a></li>
-    </ul> -->
+                    				<nav<h5>Andersen in Tanzania</h5>
+    
+        <li><a href="about.html">About Us</a></li>
+        <!-- <li><a href="about.html">Our Values</a></li>
+        <li><a href="about.html">Leadership</a></li> -->
                     				</nav>
                     				<nav class="cell large-3 medium-4 small-12">
                     					<h5>Services</h5>
