--- a/contact.html
+++ b/contact.html
@@ -278,7 +278,7 @@
 
                     <p>
                         <strong>Email:</strong><br>
-                        <a href="mailto:info.tz@andersen.com">info.tz@andersen.com</a>
+                        <a href="mailto:info.tz@andersen.com">info.tz@Andersen.com</a>
                     </p>
 
                     <p>
