--- a/careers.html
+++ b/careers.html
@@ -183,7 +183,7 @@
                         	<div class="container">
                         		<div class="text">
                         			<h1>Careers</h1>
-                        			<p>Join the leading edge: Build  your career Under Andersen </p>
+                        			<p> Join the leading edge: Build your career under Andersen </p>
                         		</div>
                         	</div>
                         </div>
