--- a/careers.html
+++ b/careers.html
@@ -275,7 +275,7 @@
 
         <div class="section-heading text-center">
             <h2>Job Application Form</h2>
-            <p>Apply to join Andersen Tanzania by submitting your details below.</p>
+            <p>Apply to join Andersen in Tanzania by submitting your details below.</p>
         </div>
 
         <div class="grid-x align-center">
