--- a/our-people.html
+++ b/our-people.html
@@ -296,6 +296,19 @@
 	technology ecosystems.">
     View more
 </span>
+<div class="profile-bio" style="display:none;">
+    <p>
+        Isaac Saburi is a Managing Director at Andersen Tanzania with extensive
+        experience in tax advisory, compliance, and strategic business consulting.
+    </p>
+
+    <p>
+        He supports both local and multinational organizations in navigating
+        complex regulatory and tax environments in Tanzania.
+    </p>
+</div>
+
+												
 </div>
                         					<!-- <a class="item" href="#">
                         						<span class="item-img">
