--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
                         				</picture>
                         				<div class="detail-text">
                         					<h1>Andersen in Tanzania</h1>
-                        					<p>At Andersen in Tanzania, we provide world-class Tax and Advisory services tailored to meet the needs of businesses, institutions, and individuals in a rapidly changing market.</p>
+                        					<p>At Andersen in Tanzania, we provide world-class tax and advisory services tailored to meet the needs of businesses, institutions,
+												and individuals in a rapidly changing market. As a member firm part of Andersen Global , we combine local expertise with global reach,
+												ensuring that our clients benefit from innovative solutions, technical excellence, and trusted guidance.</p>
                         					<a class="button" href="about.html">Learn More</a>
                         				</div>
                         			</div>
