--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                         					</div><div class="section-blocks section-blocks1 bg-blue light">
                         	<div class="container">
 								<div class="section-heading text-center">
-                                    <h2>Our Professional Services Overview</h2>
+                                    <h2>Our Services at a Glance</h2>
                                 </div>
                         		<div class="grid-x grid-padding-x">
                         			<div class="cell medium-6">
@@ -345,7 +345,7 @@
                         					<div class="text">
                         						<div class="text-body">
                         							<h3>Advisory Services</h3>
-                        							<p>Business consulting, risk management, transaction support, and corporate governance  practical solutions 
+                        							<p>Business advisor, risk management, transaction support, and corporate governance  practical solutions 
 													   to help organizations grow, adapt, and stay resilient.</p>
                         							<a href="advisory-services.html" class="button-link">Read More &raquo;</a>
                         						</div>
