--- a/about.html
+++ b/about.html
@@ -183,7 +183,8 @@
                         	<div class="container">
                         		<div class="text">
                         			<h1>Our Story</h1>
-                        			<p>Andersen in Tanzania was established in 2012 by visionary leaders committed to building a firm rooted in professionalism, integrity, and client success. Over the years, we have grown to become a trusted partner for businesses across sectors, providing high-quality tax and advisory solutions.</p>
+                        			<p>Andersen in Tanzania was established in 2012 by visionary leaders committed to building a firm rooted in professionalism, integrity, and client success.
+										Over the years, we have grown to become a trusted partner for businesses across sectors, providing high-quality tax and advisory solutions.</p>
                         		</div>
                         	</div>
                         </div>
@@ -193,7 +194,7 @@
                         		<div class="block-text">
                         			<h2>A Genuine Client-Centric
 Approach</h2>
-                        			<p>	At Andersen in Tanzania, we place our clients at the center of everything we do. By combining deep local expertise with the resources of the member and collaborating firms of Andersen Global, we deliver solutions that are tailored to the unique needs of businesses and individuals in Tanzania. Our focus is on building lasting relationships, offering personalized attention, and ensuring that every client receives the highest standard of service and value.</p>
+                        			<p>At Andersen in Tanzania, we place our clients at the center of everything we do. By combining deep local expertise with the resources of the member and collaborating firms of Andersen Global, we deliver solutions that are tailored to the unique needs of businesses and individuals in Tanzania. Our focus is on building lasting relationships, offering personalized attention, and ensuring that every client receives the highest standard of service and value.</p>
                         		</div>
                         		<div class="grid-x grid-padding-x">
                         			
