--- a/our-people.html
+++ b/our-people.html
@@ -264,7 +264,7 @@
 
 <div class="profile-bio" style="display:none;">
     <p>
-        Olive Mosha is a seasoned tax professional and Managing Director at Andersen Tanzania, with extensive
+        Olive Mosha is a seasoned tax professional and Managing Director at Andersen in Tanzania, with extensive
         experience in tax advisory, compliance, and regulatory matters.
     </p>
 
@@ -298,7 +298,7 @@
 </span>
 <div class="profile-bio" style="display:none;">
     <p>
-        Isaac Saburi is a Managing Director at Andersen Tanzania with extensive
+        Isaac Saburi is a Managing Director at Andersen in Tanzania with extensive
         experience in tax advisory, compliance, and strategic business consulting.
     </p>
 
