--- a/global-presence.html
+++ b/global-presence.html
@@ -15,7 +15,7 @@
         <link rel="shortcut icon" href="https://andersen.com/favicon.ico">
     </head>
 
-    <body class="global-presence">
+    <body class="index">
         <div class="off-canvas-wrapper">
             <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
                 <div class="off-canvas position-right" id="offCanvas" data-off-canvas data-position="right">
@@ -42,10 +42,11 @@
 <li><a href="global-presence.html">Global Presence</a></li>
 
                           </ul>
-                    </div>                </div>
+                    </div>                
+				</div>
 
                 <div class="off-canvas-content" data-off-canvas-content>
-                                   <header class="navbar" data-margin-top='0' data-sticky data-off-canvas-sticky>
+                    <header class="navbar" data-margin-top='0' data-sticky data-off-canvas-sticky>
                     	<div class="top-nav-bar">
                     		<div class="grid-x align-justify align-middle large-collapse">
                     			<div class="top-header-link">
@@ -144,7 +145,7 @@
 </li>
 
 <li>
-    <a href="javascript:void(0)">News</a>
+    <a href="news.html">News</a>
 </li>
 
 <li>
