--- a/our-people.html
+++ b/our-people.html
@@ -25,7 +25,7 @@
                     
                     <div class="mobile-menu">
                         <ul class="vertical menu" data-accordion-menu>
-                            <li><a href="index.html">Home</a></li>
+                           <li><a href="index.html">Home</a></li>
 <li><a href="about.html">About</a></li>
 <li>
     <a href="#">Services</a>
@@ -42,7 +42,8 @@
 <li><a href="global-presence.html">Global Presence</a></li>
 
                           </ul>
-                    </div>                </div>
+                    </div>                
+				</div>
 
                 <div class="off-canvas-content" data-off-canvas-content>
                     <header class="navbar" data-margin-top='0' data-sticky data-off-canvas-sticky>
@@ -140,11 +141,11 @@
 
 
 <li>
-   <a href="careers.html">Careers</a>
+    <a href="careers.html">Careers</a>
 </li>
 
 <li>
-    <a href="javascript:void(0)">News</a>
+    <a href="news.html">News</a>
 </li>
 
 <li>
