--- a/news.html
+++ b/news.html
@@ -191,115 +191,29 @@
                         	<div class="container">
                         		<div class="grid-x grid-main">
                         			<div class="sidebar cell large-3">
-                        				<nav>
-                        					<ul class="lvl-1 vertical menu accordion-menu" data-accordion-menu>
-                        						<li>
-                        							<a href="#">Root Level Nav Item 1</a>
-                        							<ul class="lvl-2 vertical nested">
-                        								<li>
-                        									<a href="#">Level 1 Nav Item 1</a>
-                        									<ul class="vertical menu lvl-3">
-                        										<li><a href="inner-sub.html">Level 2 Nav Item 1</a></li>
-                        										<li><a href="inner-sub.html">Level 2 Nav Item 2</a></li>
-                        										<li><a href="inner-sub.html">Level 2 Nav Item 3</a></li>
-                        									</ul>
-                        								</li>
-                        								<li>
-                        									<a href="#">Level 1 Nav Item 2</a>
-                        									<ul class="lvl-3">
-                        										<li><a href="inner-sub.html">Level 2 Nav Item 1</a></li>
-                        										<li><a href="inner-sub.html">Level 2 Nav Item 2</a></li>
-                        										<li><a href="inner-sub.html">Level 2 Nav Item 3</a></li>
-                        									</ul>
-                        								</li>
-                        							</ul>
-                        						</li>
-                        						<li>
-                        							<a href="#">Root Level Nav Item 2</a>
-                        							<ul class="lvl-2 vertical nested">
-                        								<li>
-                        									<a href="#">Level 1 Nav Item 1</a>
-                        									<ul class="lvl-3">
-                        										<li><a href="inner-sub.html">Level 2 Nav Item 1</a></li>
-                        										<li><a href="inner-sub.html">Level 2 Nav Item 2</a></li>
-                        										<li><a href="inner-sub.html">Level 2 Nav Item 3</a></li>
-                        									</ul>
-                        								</li>
-                        								<li>
-                        									<a href="#">Level 1 Nav Item 2</a>
-                        									<ul class="lvl-3">
-                        										<li><a href="inner-sub.html">Level 2 Nav Item 1</a></li>
-                        										<li><a href="inner-sub.html">Level 2 Nav Item 2</a></li>
-                        										<li><a href="inner-sub.html">Level 2 Nav Item3</a></li>
-                        									</ul>
-                        								</li>
-                        							</ul>
-                        						</li>
-                        						<li>
-                        							<a href="#">Root Level Nav Item 3</a>
-                        							<ul class="lvl-2 vertical nested">
-                        								<li>
-                        									<a href="#">Level 1 Nav Item 1</a>
-                        									<ul class="lvl-3">
-                        										<li><a href="#">Level 2 Nav Item 1</a></li>
-                        										<li><a href="#">Level 2 Nav Item 2</a></li>
-                        										<li><a href="#">Level 2 Nav Item 3</a></li>
-                        									</ul>
-                        								</li>
-                        								<li>
-                        									<a href="#">Level 1 Nav Item 2</a>
-                        									<ul class="lvl-3">
-                        										<li><a href="#">Level 2 Nav Item 1</a></li>
-                        										<li><a href="#">Level 2 Nav Item 2</a></li>
-                        										<li><a href="#">Level 2 Nav Item3</a></li>
-                        									</ul>
-                        								</li>
-                        							</ul>
-                        						</li>
-                        						<li>
-                        							<a href="#">Root Level Nav Item 4</a>
-                        							<ul class="lvl-2 vertical nested">
-                        								<li>
-                        									<a href="#">Level 1 Nav Item 1</a>
-                        									<ul class="lvl-3">
-                        										<li><a href="#">Level 2 Nav Item 1</a></li>
-                        										<li><a href="#">Level 2 Nav Item 2</a></li>
-                        										<li><a href="#">Level 2 Nav Item 3</a></li>
-                        									</ul>
-                        								</li>
-                        								<li>
-                        									<a href="#">Level 1 Nav Item 2</a>
-                        									<ul class="lvl-3">
-                        										<li><a href="#">Level 2 Nav Item 1</a></li>
-                        										<li><a href="#">Level 2 Nav Item 2</a></li>
-                        										<li><a href="#">Level 2 Nav Item3</a></li>
-                        									</ul>
-                        								</li>
-                        							</ul>
-                        						</li>
-                        						<li>
-                        							<a href="#">Root Level Nav Item 5</a>
-                        							<ul class="lvl-2 vertical nested">
-                        								<li>
-                        									<a href="#">Level 1 Nav Item 1</a>
-                        									<ul class="lvl-3">
-                        										<li><a href="#">Level 2 Nav Item 1</a></li>
-                        										<li><a href="#">Level 2 Nav Item 2</a></li>
-                        										<li><a href="#">Level 2 Nav Item 3</a></li>
-                        									</ul>
-                        								</li>
-                        								<li>
-                        									<a href="#">Level 1 Nav Item 2</a>
-                        									<ul class="lvl-3">
-                        										<li><a href="#">Level 2 Nav Item 1</a></li>
-                        										<li><a href="#">Level 2 Nav Item 2</a></li>
-                        										<li><a href="#">Level 2 Nav Item3</a></li>
-                        									</ul>
-                        								</li>
-                        							</ul>
-                        						</li>
-                        					</ul>
-                        				</nav>
+                        				<div class="sidebar-card">
+
+    <div class="sidebar-group">
+        <h4 class="sidebar-title">All Content</h4>
+        <ul class="sidebar-list">
+            <li class="active"><a href="#">All Content <span>(17)</span></a></li>
+            <li><a href="#">Our Articles <span>(15)</span></a></li>
+            <li><a href="#">LinkedIn Posts <span>(2)</span></a></li>
+        </ul>
+    </div>
+
+    <div class="sidebar-group">
+        <h4 class="sidebar-title">By Topic</h4>
+        <ul class="sidebar-list">
+            <li><a href="#">Tax Updates <span>(5)</span></a></li>
+            <li><a href="#">Regulatory Changes <span>(8)</span></a></li>
+            <li><a href="#">Business Insights <span>(4)</span></a></li>
+            <li><a href="#">Firm's News <span>(2)</span></a></li>
+        </ul>
+    </div>
+
+</div>
+
                         			</div>
                         			<div class="cell large-9">
                         				<div class="main-column">
