--- a/news.html
+++ b/news.html
@@ -196,19 +196,19 @@
     <div class="sidebar-group">
         <h4 class="sidebar-title">All Content</h4>
         <ul class="sidebar-list">
-            <li class="active"><a href="#">All Content <span>(17)</span></a></li>
-            <li><a href="#">Our Articles <span>(15)</span></a></li>
-            <li><a href="#">LinkedIn Posts <span>(2)</span></a></li>
+            <li class="active"><a href="#">All Content <span></span></a></li>
+            <li><a href="#">Our Articles <span></span></a></li>
+            <li><a href="https://www.linkedin.com/company/andersen-in-tanzania/">LinkedIn Posts <span></span></a></li>
         </ul>
     </div>
 
     <div class="sidebar-group">
         <h4 class="sidebar-title">By Topic</h4>
         <ul class="sidebar-list">
-            <li><a href="#">Tax Updates <span>(5)</span></a></li>
-            <li><a href="#">Regulatory Changes <span>(8)</span></a></li>
-            <li><a href="#">Business Insights <span>(4)</span></a></li>
-            <li><a href="#">Firm's News <span>(2)</span></a></li>
+            <li><a href="#">Tax Updates <span></span></a></li>
+            <li><a href="#">Regulatory Changes <span></span></a></li>
+            <li><a href="#">Business Insights <span></span></a></li>
+            <li><a href="#">Firm's News <span></span></a></li>
         </ul>
     </div>
 
