--- a/news.html
+++ b/news.html
@@ -190,62 +190,61 @@
                         <div class="section-sidebar">
                         	<div class="container">
                         		<div class="grid-x grid-main">
-                        			<div class="sidebar cell large-3">
-                        				<div class="sidebar-card">
 
-    <div class="sidebar-group">
-    <h4 class="sidebar-title">All Content</h4>
-    <ul class="sidebar-list">
+    <!-- LEFT SIDEBAR -->
+    <div class="sidebar cell large-3">
+        <div class="sidebar-card">
 
-        <li>
-            <a href="#" class="coming-link">All Content</a>
-            <div class="coming-text">Coming soon</div>
-        </li>
+            <div class="sidebar-group">
+                <h4 class="sidebar-title">All Content</h4>
+                <ul class="sidebar-list">
+                    <li class="active">
+                        <a href="#" class="coming-link">All Content</a>
+                        <div class="coming-text">Coming soon</div>
+                    </li>
 
-        <li>
-            <a href="#" class="coming-link">Our Articles</a>
-            <div class="coming-text">Coming soon</div>
-        </li>
+                    <li>
+                        <a href="#" class="coming-link">Our Articles</a>
+                        <div class="coming-text">Coming soon</div>
+                    </li>
 
-        <li>
-            <a href="https://www.linkedin.com/company/andersen-in-tanzania/" target="_blank">
-                LinkedIn Posts
-            </a>
-        </li>
+                    <li>
+                        <a href="https://www.linkedin.com/company/andersen-in-tanzania/" target="_blank">
+                            LinkedIn Posts
+                        </a>
+                    </li>
+                </ul>
+            </div>
 
-    </ul>
-</div>
+            <div class="sidebar-group">
+                <h4 class="sidebar-title">By Topic</h4>
+                <ul class="sidebar-list">
+                    <li>
+                        <a href="#" class="coming-link">Tax Updates</a>
+                        <div class="coming-text">Coming soon</div>
+                    </li>
 
-<div class="sidebar-group">
-    <h4 class="sidebar-title">By Topic</h4>
-    <ul class="sidebar-list">
+                    <li>
+                        <a href="#" class="coming-link">Regulatory Changes</a>
+                        <div class="coming-text">Coming soon</div>
+                    </li>
 
-        <li>
-            <a href="#" class="coming-link">Tax Updates</a>
-            <div class="coming-text">Coming soon</div>
-        </li>
+                    <li>
+                        <a href="#" class="coming-link">Business Insights</a>
+                        <div class="coming-text">Coming soon</div>
+                    </li>
 
-        <li>
-            <a href="#" class="coming-link">Regulatory Changes</a>
-            <div class="coming-text">Coming soon</div>
-        </li>
+                    <li>
+                        <a href="#" class="coming-link">Firm's News</a>
+                        <div class="coming-text">Coming soon</div>
+                    </li>
+                </ul>
+            </div>
 
-        <li>
-            <a href="#" class="coming-link">Business Insights</a>
-            <div class="coming-text">Coming soon</div>
-        </li>
-
-        <li>
-            <a href="#" class="coming-link">Firm's News</a>
-            <div class="coming-text">Coming soon</div>
-        </li>
-
-    </ul>
-</div>
-
-
-                        			</div>
-                        			<div class="cell large-9">
+        </div>
+    </div>
+                        			
+										<div class="cell large-9">
                         				<div class="main-column">
                         					<div class="bg">
                         						<img src="assets/img/Swooshes.svg" alt="" class="">
