--- a/news.html
+++ b/news.html
@@ -182,8 +182,9 @@
                         	</div>
                         	<div class="container">
                         		<div class="text">
-                        			<h1>Headline Text Goes Here</h1>
-                        			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                        			<h1>News</h1>
+                        			<p>Our depth of knowledge and experience gives us the unique insights into corporate and commercial matters across the globe, 
+										from niche homegrown businesses to expansive multinational organizations.</p>
                         		</div>
                         	</div>
                         </div>
@@ -250,8 +251,8 @@
                         						<img src="assets/img/Swooshes.svg" alt="" class="">
                         					</div>
                         					<div class="main-column--content">
-                        						<h2>Header One</h2>
-                        						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                        						<h2>Andersen membership press release</h2>
+                        						<p>Andersen Adds Member Firm in Tanzania, Offering a Wide Range of Solutions to Clients.</p>
                         						<hr />
                         						<figcaption><strong>Above:</strong> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper</figcaption>
                         						<div class="section-blocks section-blocks1">
