--- a/news.html
+++ b/news.html
@@ -291,7 +291,7 @@
                         								</div>
                         							</div>
                         						</div>
-                        						<div class="section-blocks section-blocks4">
+                        						<!-- <div class="section-blocks section-blocks4">
                         							<div class="item item-featured">
                         								<div class="image">
                         									<span class="img-bg">
@@ -656,7 +656,7 @@
                         		</div>
                         	</div>
                         </div>
-                    </div>
+                    </div> -->
 
                    <footer class="footer" id="footer">
                     	<div class="container">
