--- a/news.html
+++ b/news.html
@@ -254,7 +254,8 @@
                         						<h2>Andersen membership press release</h2>
                         						<p>Andersen Adds Member Firm in Tanzania, Offering a Wide Range of Solutions to Clients.</p>
                         						<hr />
-                        						<figcaption><strong>Above:</strong> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper</figcaption>
+                        						<!-- <figcaption><strong>Above:</strong> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut 
+													laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper</figcaption> -->
                         						<div class="section-blocks section-blocks1">
                         							<div class="grid-x grid-padding-x">
                         								<div class="cell medium-6">
