--- a/news.html
+++ b/news.html
@@ -262,7 +262,7 @@
                         									<div class="item">
                         										<div class="image">
                         											<span class="img-bg">
-                        												<img src="assets/img/block1.jpg" alt="image">
+                        												<img src="assets/img/LaunchingPhoto.jpg" alt="image">
                         											</span>
                         										</div>
                         										<div class="text">
@@ -278,7 +278,7 @@
                         									<div class="item">
                         										<div class="image">
                         											<span class="img-bg">
-                        												<img src="assets/img/block2.jpg" alt="image">
+                        												<img src="assets/img/LaunchingPhoto.jpg" alt="image">
                         											</span>
                         										</div>
                         										<div class="text">
