--- a/news.html
+++ b/news.html
@@ -267,8 +267,11 @@
                         										</div>
                         										<div class="text">
                         											<div class="text-body">
-                        												<h3>Header One</h3>
-                        												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        												<h3> New name. Same people. Bigger global family.</h3>
+                        												<p>Formerly Ishara Consulting Limited, we are proud to officially step into our new chapter as part of Andersen Global and yes, the energy in the room matched the milestone.
+                                                                           It was a pleasure celebrating with our partners, clients, and our exceptional team, who make big transitions look effortless (and enjoyable).
+                                                                           As Andersen in Tanzania, we move forward with global reach, local expertise, and just enough confidence to know we’re exactly where we’re meant to be.
+                                                                           Onward. Together.</p>
                         												<a href="#" class="button-link">Read More &raquo;</a>
                         											</div>
                         										</div>
