--- a/news.html
+++ b/news.html
@@ -272,7 +272,7 @@
                                                                            It was a pleasure celebrating with our partners, clients, and our exceptional team, who make big transitions look effortless (and enjoyable).
                                                                            As Andersen in Tanzania, we move forward with global reach, local expertise, and just enough confidence to know we’re exactly where we’re meant to be.
                                                                            Onward. Together.</p>
-                        												<a href="#" class="button-link">Read More &raquo;</a>
+                        												<a href="https://www.linkedin.com/company/andersen-in-tanzania/posts/?feedView=all" class="button-link">Read More &raquo;</a>
                         											</div>
                         										</div>
                         									</div>
