--- a/our-people.html
+++ b/our-people.html
@@ -255,11 +255,12 @@
                         						<span class="item-position">Managing Director</span>
 												<span class="item-link"
       data-image="assets/img/olive.jpg"
-      data-bio="James is a seasoned tax expert and the Founding Managing Director/Partner at Andersen in Tanzania, 
-	  specializing in accounting, tax compliance and reporting, and outsourced services. He has a proven track record
-	   guiding domestic and multinational clients through complex regulatory environments, designing internal controls,
-	    and securing favorable outcomes. His experience spans agriculture, energy, infrastructure, financial services, 
-		and technology ecosystems.">
+      data-bio="Olive Mosha is a seasoned tax expert and the Founding Managing Director at Andersen in Tanzania, specializing in tax advisory, compliance, regulatory matters, and strategic business support. She has over 20 years of experience in the tax field and is a registered Tax Consultant with a Certificate of Practice issued by the Tanzania Revenue Authority (TRA).
+Olive has a proven track record in guiding both domestic and multinational clients through Tanzania’s complex tax and regulatory environment. She supports businesses in establishing operations, strengthening internal compliance frameworks, enhancing financial reporting processes, and managing tax risks effectively. She is also experienced in handling tax dispute resolutions and regulatory engagements, helping clients achieve practical and sustainable outcomes.
+Her proficiency extends to Transaction Deals and M&A Advisory, particularly in advising on tax matters related to entry strategy, acquisitions, realignment, and exit structures, as well as tax due diligence.
+Her expertise spans multiple sectors, including financial services, energy, infrastructure, agribusiness, and emerging industries.
+Beyond her leadership role at Andersen, Olive is a respected business leader known for her integrity, strategic insight, and commitment to professional excellence.
+">
     View more
 </span>
 
