--- a/our-people.html
+++ b/our-people.html
@@ -266,19 +266,30 @@ Beyond her leadership role at Andersen, Olive is a respected business leader kno
 
 <div class="profile-bio" style="display:none;">
     <p>
-        Olive Mosha is a seasoned tax professional and Managing Director at Andersen in Tanzania, with extensive
-        experience in tax advisory, compliance, and regulatory matters.
+        Olive Mosha is a seasoned tax expert and the Founding Managing Director at Andersen in Tanzania, specializing in tax advisory, compliance, 
+		regulatory matters, and strategic business support. She has over 20 years of experience in the tax field and is a registered Tax Consultant 
+		with a Certificate of Practice issued by the Tanzania Revenue Authority (TRA).
     </p>
 
     <p>
-        She has a strong track record supporting both domestic and multinational clients across multiple sectors,
-        including financial services, energy, infrastructure, and agribusiness.
+        Olive has a proven track record in guiding both domestic and multinational clients through Tanzania’s complex tax and regulatory environment. 
+		She supports businesses in establishing operations, strengthening internal compliance frameworks, enhancing financial reporting processes, and 
+		managing tax risks effectively. She is also experienced in handling tax dispute resolutions and regulatory engagements, helping clients achieve 
+		practical and sustainable outcomes.
     </p>
 
     <p>
-        Olive is known for her practical, client-focused approach and her ability to guide organizations through
-        complex tax and business environments in Tanzania.
+       Her proficiency extends to Transaction Deals and M&A Advisory, particularly in advising on tax matters related to entry strategy, acquisitions, 
+	   realignment, and exit structures, as well as tax due diligence.
     </p>
+
+	
+    <p>
+       Her expertise spans multiple sectors, including financial services, energy, infrastructure, agribusiness, and emerging industries.
+	   Beyond her leadership role at Andersen, Olive is a respected business leader known for her integrity, strategic insight, and commitment 
+		to professional excellence.
+    </p>
+	
 </div>
 </div>
                         					
