--- a/our-people.html
+++ b/our-people.html
@@ -311,13 +311,25 @@ Beyond her leadership role at Andersen, Olive is a respected business leader kno
 </span>
 <div class="profile-bio" style="display:none;">
     <p>
-        Isaac Saburi is a Managing Director at Andersen in Tanzania with extensive
-        experience in tax advisory, compliance, and strategic business consulting.
+        Isaac Saburi is a Managing Director at Andersen in Tanzania with extensive experience in tax advisory, compliance, and strategic
+		business consulting. He has over 25 years of experience in the tax field and is a registered Tax Consultant holding a Certificate of
+		Practice issued by the Tanzania Revenue Authority (TRA).
     </p>
 
     <p>
-        He supports both local and multinational organizations in navigating
-        complex regulatory and tax environments in Tanzania.
+        Isaac supports both local and multinational organizations in navigating Tanzania’s complex regulatory and tax environment. He has a 
+		strong track record in advising clients on tax planning, compliance management, corporate structuring, and regulatory engagements, 
+		helping businesses establish and operate efficiently while managing tax risks effectively.
+    </p>
+
+	<p>
+        He is particularly experienced in handling complex tax matters, providing strategic guidance during tax audits and dispute resolution processes, 
+		and supporting clients with business transformation and growth strategies.
+    </p>
+
+	<p>
+        Isaac is known for his deep technical expertise, pragmatic approach, and commitment to delivering sustainable, value-driven solutions across a wide range 
+		of industries.
     </p>
 </div>
 
