--- a/careers.html
+++ b/careers.html
@@ -184,7 +184,7 @@
                         	<div class="container">
                         		<div class="text">
                         			<h1>Careers</h1>
-                        			<p> Join the leading edge: Build your career under Andersen </p>
+                        			<p> Join the leading edge: Build your career under Andersen in Tanzania</p>
                         		</div>
                         	</div>
                         </div>
