--- a/news.html
+++ b/news.html
@@ -286,8 +286,13 @@
                         										</div>
                         										<div class="text">
                         											<div class="text-body">
-                        												<h3>Header Two</h3>
-                        												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        												<h3>Global Network. Local Impact.</h3>
+                        												<p>Becoming part of Andersen Global was more than a name change , it was a commitment to serve our clients at a higher level.
+																			With access to a worldwide network of professionals, we now combine international insight with deep Tanzanian expertise.
+                                                                            For our clients, this means broader capabilities, stronger collaboration across borders, and solutions designed with both
+																			global perspective and local precision  We remain the same trusted team — now backed by a global platform built to support 
+																			growing businesses, expanding enterprises, and ambitious ideas.
+                                                                            The journey continues, and we are ready for what comes next.</p>
                         												<a href="#" class="button-link">Read More &raquo;</a>
                         											</div>
                         										</div>
