--- a/news.html
+++ b/news.html
@@ -287,13 +287,13 @@
                         										<div class="text">
                         											<div class="text-body">
                         												<h3>Global Network. Local Impact.</h3>
-                        												<p>Becoming part of Andersen Global was more than a name change , it was a commitment to serve our clients at a higher level.
+                        												<p> Becoming part of Andersen Global was more than a name change , it was a commitment to serve our clients at a higher level.
 																			With access to a worldwide network of professionals, we now combine international insight with deep Tanzanian expertise.
                                                                             For our clients, this means broader capabilities, stronger collaboration across borders, and solutions designed with both
 																			global perspective and local precision  We remain the same trusted team — now backed by a global platform built to support 
 																			growing businesses, expanding enterprises, and ambitious ideas.
                                                                             The journey continues, and we are ready for what comes next.</p>
-                        												<a href="#" class="button-link">Read More &raquo;</a>
+                        												<a href="https://www.linkedin.com/company/andersen-in-tanzania/posts/?feedView=all" class="button-link">Read More &raquo;</a>
                         											</div>
                         										</div>
                         									</div>
